# docs/swagger.yaml
@@ -67,6 +67,18 @@ definitions:
       success:
         type: string
     type: object
+  dto.CreateScheduleRequest:
+    properties:
+      clinic_address_id:
+        description: "Doctor_id   \t\t\tstring    `json:\"doctor_id\"`"
+        type: string
+      day_of_week:
+        type: integer
+      end_time:
+        type: string
+      start_time:
+        type: string
+    type: object
   dto.CreateScheduleResponse:
     properties:
       message:
@@ -118,6 +130,8 @@ definitions:
   dto.GetClinicAddressResponse:
     properties:
       address_id:
+        type: string
+      id:
         type: string
       is_main:
         type: boolean
@@ -905,7 +919,7 @@ paths:
       parameters:
       - description: Doctor ID (UUID)
         in: path
-        name: id
+        name: doctorId
         required: true
         type: string
       - description: Schedule registration data
@@ -913,7 +927,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/dto.CreateRequest'
+          $ref: '#/definitions/dto.CreateScheduleRequest'
       produces:
       - application/json
       responses:
