# internal/modules/schedule/dto/schedule_response.go
@@ -1,7 +1,7 @@
 package dto
 
 import (
-	"time"
+	// "time"
 
 )
 
@@ -9,8 +9,8 @@ type CreateScheduleRequest struct {
 	// Doctor_id   			string    `json:"doctor_id"`
 	Clinic_address_id      	string    `json:"clinic_address_id"`
 	Day_of_week    			int    `json:"day_of_week"`
-	Start_time  			time.Time    `json:"start_time"`
-	End_time  				time.Time   `json:"end_time"`
+	Start_time  			string    `json:"start_time"`
+	End_time  				string   `json:"end_time"`
 }
 
 type CreateScheduleResponse struct {
